# diss-db

./: .gitignore  DEVNOTE.rst  Gemfile  Makefile  README.md  docker-compose.yml  docker-compose.yml.j2  manage.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
aha-data/: committee-members.csv  normalize.R  scholars.csv  schools.csv
app/assets/stylesheets/: application.bootstrap.scss  variables.scss
app/views/layouts/: application.html.erb
config/: application.rb  asgi.py  cable.yml  credentials.yml.enc  database.yml  settings.py  urls.py  wsgi.py
config/environments/: production.rb
config/initializers/: active_admin.rb  devise.rb
data-raw/: normalize.R
db/: schema.rb  seeds.rb
db/aha-data/: schools.csv
dissdb/: apps.py  asgi.py  filters.py  models.py  serializers.py  settings.py  tables.py  urls.py  views.py  wsgi.py
dissdb/migrations/: 0001_initial.py  0001_model_school.py  0002_seed_schools.py  0003_scholar.py  0004_seed_scholars.py  0005_alter_scholar_aha_scholar_id_dissertation.py  0006_seed_dissertations.py  0007_committeemember.py  0008_seed_committees.py  0009_alter_dissertation_year.py  0010_alter_dissertation_year.py
dissertations/: admin.py  filters.py  models.py  serializers.py  tables.py  urls.py  views.py
dissertations/migrations/: 0002_seed_schools.py  0003_scholar.py  0004_seed_scholars.py  0005_alter_scholar_aha_scholar_id_dissertation.py  0006_seed_dissertations.py  0007_committeemember.py  0008_seed_committees.py  0009_alter_dissertation_year.py
dissertations/templates/: base.html  index.html
dissertations/templates/dissertations/: committeemember_filter.html  dissertation_detail.html  dissertation_filter.html  scholar_detail.html
templates/: about.html  base.html  index.html
templates/dissertations/: committeemember_filter.html  dissertation_detail.html  dissertation_filter.html  scholar_detail.html
templates/django_tables2/: tailwind.html
test/fixtures/: schools.yml
theme/static_src/: package-lock.json
theme/static_src/src/: styles.css
