[tool.poetry]
name = "dissdb"
version = "0.1.0"
description = "dissdb: A web application to keep track of dissertations in history, and thus scholarly genealogies"
authors = ["Savannah Scott <sscott2@eagles.bridgewater.edu>", "Jason Heppler <jheppler@gmu.edu>", "Lincoln Mullen <lmullen@gmu.edu>"]
license = "MIT"
readme = "README.md"
#requires-python = ">=3.12"
packages = [{include = "dissdb"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
daphne = "^4.1.2"
whitenoise = "^6.8.2"
django = "^5.1.4"
django-environ = "^0.11.2"
django-tailwind = "^3.8.0"
# postgres
psycopg2 = "^2.9.10"
# obj storage
#django-storages = "^1.14.4"
#boto3 = "^1.35.27"
django-tables2 = "^2.7.5"
django-filter = "^25.1"
django-rest-framework = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
djhtml = "^3.0.7"
pre-commit = "^4.0.1"
django-debug-toolbar = "^4.4.6"
pytest-django = "^4.9.0"
pylint-django = "^2.6.1"

